# Project-Abstraction

./: CMakeLists.txt  OrgFile.org  README.md
content/: settings.json
content/pipelines/: deferred.pipeline.xml  forward.pipeline.xml  globalSettings.material.xml  hdr.pipeline.xml  justcopy.material.xml  rtt.pipeline.xml
content/scripts/: BaseBehaviour.nut  BaseScript.as  Debug.nut  PlayerBehaviour.nut  Reloader.nut  Test.nut  freecamera.as  init.nut  scriptManager.nut
content/shaders/: common.glsl  commonFrag.glsl  commonVert.glsl  fog.glsl  gui.frag  gui.vert  justcopy.shader  model.shader  phong.frag  phong.vert  phongCommon.glsl  phongTextured.frag  quad.frag  quad.vert  simple.frag  unshaded.frag  unshaded.vert  unshaded_textured.frag  unshaded_textured.vert
extras/blender_addon/io_mesh_pamesh/: __init__.py  exporter.py
src/: boundingvolumes.cpp  boundingvolumes.h  camera.cpp  camera.h  camerasystems.cpp  camerasystems.h  collisionshapes.cpp  collisionshapes.h  component.cpp  component.h  componentTypes.h  componentmanager.cpp  componentmanager.h  console.cpp  console.h  cpu.cpp  cpu.h  datatypes.h  editor.cpp  editor.h  framebuffer.cpp  framebuffer.h  game.cpp  game.h  gameobject.cpp  gameobject.h  geometry.cpp  geometry.h  gui.cpp  gui.h  input.cpp  input.h  jsondefs.h  light.cpp  light.h  log.cpp  log.h  main.cpp  material.cpp  material.h  (+30 more)
